<resources>
    <string name="app_name">Aseguradora</string>
    <string name="hint_ppu">PPU o PATENTE</string>
    <string name="hint_marca">Marca</string>
    <string name="hint_modelo">Modelo</string>
    <string name="hint_año">Año</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_volver">Volver</string>
    <string name="mensaje_marcamodelo">%1$s %2$s</string>
    <string name="mensaje_patente">%1$s</string>
    <string name="mensaje_resultado">%1$s </string>
    <string name="valor_seguro">$%1$s pesos</string>
    <string name="mensaje_menos1antiguedad">menos de 1 año de antigüedad</string>
    <string name="mensaje_2antiguedad">%1$d años de antigüedad</string>
    <string name="mensaje_1antiguedad">%1$d año de antigüedad</string>
</resources>
