<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.espinoza.aseguradora.MostrarDatos">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imv_Estado"
            android:maxHeight="50px"
            android:maxWidth="50px"
            />
        <TextView
            android:id="@+id/txv_DatosAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_resultado"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/txv_ValorSeguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_seguro"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/btn_Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_volver"
        android:onClick="salir"/>
</LinearLayout>
